compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__import_type_duplicate_with_as_multiline.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 237
expression: "import one.{\n          type One as MyOne,\n          type One as MyOne\n        }\n\npub type X = One\n"
---
----- SOURCE CODE
-- one.rakun
pub type One = Int

-- main.rakun
import one.{
          type One as MyOne,
          type One as MyOne
        }

pub type X = One


----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.rakun:2:11
  │
2 │           type One as MyOne,
  │           ^^^^^^^^^^^^^^^^^ First defined here
3 │           type One as MyOne
  │           ^^^^^^^^^^^^^^^^^ Redefined here

The type `MyOne` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.

error: Unknown type
  ┌─ /src/one/two.rakun:6:14
  │
6 │ pub type X = One
  │              ^^^ Did you mean `MyOne`?

The type `One` is not defined or imported in this module.
